[package]
name = "melior"
description = "The rustic MLIR bindings in Rust"
version = "0.18.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/melior"
documentation = "https://raviqqe.github.io/melior/melior/"
keywords = ["mlir", "llvm"]

[features]
ods-dialects = []

[dependencies]
dashmap = "6.0.1"
melior-macro = { version = "0.11.5", path = "../macro" }
mlir-sys = { git = "https://github.com/azteca1998/mlir-sys.git", branch = "update-llvm19" }
once_cell = "1"

[dev-dependencies]
indoc = "2.0.5"
insta = "1.39.0"
pretty_assertions = "1.4.0"
